Fixed some formatting and alignment issues on the biblio page

--- a/src/main/webapp/css/doecode-media-queries.css
+++ b/src/main/webapp/css/doecode-media-queries.css
@@ -254,6 +254,9 @@
     .navbar-datepicker{
         max-width:45%;
     }
+    .no-col-padding-left-sm{
+        padding-left:0px !important;
+    }
 }
 
 /* Medium Devices, Desktops */
